--- a/app/src/main/res/layout/item_progress_empty.xml
+++ b/app/src/main/res/layout/item_progress_empty.xml
@@ -28,7 +28,7 @@
             />
 
         <androidx.appcompat.widget.AppCompatTextView
-            style="@style/EditText"
+            style="@style/TextView"
             android:id="@+id/tv_carrier_name"
             android:gravity="center"
             android:text="@string/msg_empty_progress_list"
