--- a/app/src/main/res/layout/setting_fragment.xml
+++ b/app/src/main/res/layout/setting_fragment.xml
@@ -22,8 +22,8 @@
             >
 
             <androidx.appcompat.widget.AppCompatTextView
+                style="@style/TextView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:text="@string/notification"
                 android:textSize="24sp"
                 android:textColor="@color/c1"
@@ -44,8 +44,7 @@
                 >
 
                 <androidx.appcompat.widget.AppCompatTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style="@style/TextView"
                     android:text="@string/notification_access"
                     android:textSize="16sp"
                     android:textColor="@color/c1"
@@ -78,8 +77,7 @@
                 >
 
                 <androidx.appcompat.widget.AppCompatTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style="@style/TextView"
                     android:text="@string/get_notification"
                     android:textSize="16sp"
                     android:textColor="@color/c1"
@@ -105,8 +103,8 @@
             <View style="@style/LinearDevider.15dp" />
 
             <androidx.appcompat.widget.AppCompatTextView
+                style="@style/TextView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:text="@string/app_info"
                 android:textSize="24sp"
                 android:textColor="@color/c1"
@@ -136,8 +134,7 @@
                     />
 
                 <androidx.appcompat.widget.AppCompatTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style="@style/TextView"
                     android:text="@string/app_name"
                     android:textSize="16sp"
                     android:textColor="@color/c1"
