--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -5,6 +5,7 @@
     >
 
     <data>
+        <import type="android.view.View"/>
         <variable
             name="vm"
             type="danggai.app.parcelwhere.ui.main.MainViewModel"/>
@@ -13,7 +14,7 @@
             type="danggai.app.parcelwhere.data.db.track.TrackEntity"/>
     </data>
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -21,7 +22,9 @@
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/f1" />
+            android:background="@color/f1"
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
         <com.chauthai.swipereveallayout.SwipeRevealLayout
             android:id="@+id/srl"
@@ -29,7 +32,12 @@
             android:layout_height="wrap_content"
             android:background="@color/b1"
             app:mode="same_level"
-            app:dragEdge="right">
+            app:dragEdge="right"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            >
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="80dp"
@@ -100,6 +108,7 @@
                         android:layout_marginVertical="3dp"
                         app:layout_constraintTop_toBottomOf="@id/tv_carrier_name"
                         app:layout_constraintLeft_toLeftOf="parent"
+                        android:background="?attr/selectableItemBackground"
                         />
 
                     <View
@@ -143,7 +152,7 @@
 
         </com.chauthai.swipereveallayout.SwipeRevealLayout>
 
-    </androidx.appcompat.widget.LinearLayoutCompat>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </layout>
