--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -11,7 +11,7 @@
             type="danggai.app.parcelwhere.ui.main.MainViewModel"/>
         <variable
             name="item"
-            type="danggai.app.parcelwhere.data.db.track.TrackEntity"/>
+            type="danggai.app.parcelwhere.data.local.TrackListItem"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -76,7 +76,7 @@
                         android:id="@+id/tv_item_name"
                         android:hint="@string/item_name_empty"
                         android:gravity="start"
-                        android:text="@{item.itemName}"
+                        android:text="@{item.trackEntity.itemName}"
                         android:textSize="24sp"
                         android:textColor="@color/f1"
                         android:textStyle="bold"
@@ -89,7 +89,7 @@
                         android:id="@+id/tv_carrier_name"
                         android:hint="@string/carrier_name"
                         android:gravity="start"
-                        android:text="@{item.carrierName}"
+                        android:text="@{item.trackEntity.carrierName}"
                         android:textSize="14sp"
                         android:textColor="@color/f1"
                         android:textIsSelectable="true"
@@ -102,7 +102,7 @@
                         android:id="@+id/tv_track_id"
                         android:hint="@string/track_id"
                         android:gravity="start"
-                        android:text="@{item.trackId}"
+                        android:text="@{item.trackEntity.trackId}"
                         android:textColor="@color/f1"
                         android:onClick="@{() -> vm.onClickTrackId(item)}"
                         android:layout_marginVertical="3dp"
@@ -128,7 +128,7 @@
                         android:textSize="18sp"
                         android:textColor="@color/f1"
                         android:textStyle="bold"
-                        tools:text="@{item.recentStatus}"
+                        tools:text="@{item.trackEntity.recentStatus}"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintBottom_toTopOf="@id/tv_time"
                         />
@@ -151,6 +151,17 @@
             </FrameLayout>
 
         </com.chauthai.swipereveallayout.SwipeRevealLayout>
+
+        <ProgressBar
+            android:id="@+id/progress1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminateTint="@color/f2"
+            android:visibility="@{item.refreshing ?View.VISIBLE :View.GONE}"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
