--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -17,7 +17,7 @@
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/sr_layout"
-            isRefreshing="@{vm.lvIsRefresh}"
+            isRefreshing="@{vm.lvIsRefreshing}"
             viewModel="@{vm}"
             android:layout_width="match_parent"
             android:layout_height="0dp"
