--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -29,12 +29,14 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_track_list"
-                items="@{vm.lvMyTracksList}"
-                viewModel="@{vm}"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/f1"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                items="@{vm.lvMyTracksList}"
+                viewModel="@{vm}"
+                isChanged="@{vm.lvItemSetChanged}"
+                />
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
