--- a/app/src/main/res/layout/track_add_fragment.xml
+++ b/app/src/main/res/layout/track_add_fragment.xml
@@ -24,6 +24,7 @@
                 android:paddingBottom="5dp"
                 viewModel="@{vm}"
                 items="@{vm.lvCarrierList}"
+                isChanged="@{vm.lvItemSetChanged}"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 />
 
