--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -58,4 +58,15 @@
         <item name="android:background">@color/c4</item>
     </style>
 
+    <style name="radioButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/c1</item>
+        <item name="android:buttonTint">@color/c1</item>
+        <item name="android:layout_marginTop">-8dp</item>
+        <item name="android:layout_marginBottom">-8dp</item>
+                <item name="android:paddingTop">-8dp</item>
+                <item name="android:paddingBottom">-8dp</item>
+    </style>
+
 </resources>
