--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -9,92 +9,142 @@
             type="danggai.app.parcelwhere.ui.main.MainViewModel"/>
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+        <!--        <androidx.appcompat.widget.LinearLayoutCompat-->
+<!--            android:id="@+id/ll_bottom"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:weightSum="2"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintRight_toRightOf="parent"-->
+<!--            app:layout_constraintLeft_toLeftOf="parent"-->
+<!--            android:background="@color/c1"-->
+<!--            >-->
+
+<!--            <com.balysv.materialripple.MaterialRippleLayout-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_weight="1"-->
+<!--                android:layout_height="match_parent"-->
+<!--                app:mrl_rippleOverlay="true"-->
+<!--                app:mrl_rippleDuration="250"-->
+<!--                >-->
+
+<!--                <androidx.appcompat.widget.AppCompatImageView-->
+<!--                    android:id="@+id/btn_setting"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_gravity="center"-->
+<!--                    android:src="@drawable/baseline_settings_24"-->
+<!--                    android:tint="@color/f1"-->
+<!--                    android:padding="7dp"-->
+<!--                    android:onClick="@{(v) -> vm.onClick(v)}"-->
+<!--                    />-->
+
+<!--            </com.balysv.materialripple.MaterialRippleLayout>-->
+
+<!--            <com.balysv.materialripple.MaterialRippleLayout-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_weight="1"-->
+<!--                android:layout_height="match_parent"-->
+<!--                app:mrl_rippleOverlay="true"-->
+<!--                app:mrl_rippleDuration="250"-->
+<!--                >-->
+
+<!--                <androidx.appcompat.widget.AppCompatImageView-->
+<!--                    android:id="@+id/btn_add"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_gravity="center"-->
+<!--                    android:src="@drawable/baseline_add_24"-->
+<!--                    android:tint="@color/f1"-->
+<!--                    android:padding="7dp"-->
+<!--                    android:onClick="@{(v) -> vm.onClick(v)}"-->
+<!--                    />-->
+
+    <!--            </com.balysv.materialripple.MaterialRippleLayout>-->
+
+    <!--        </androidx.appcompat.widget.LinearLayoutCompat>-->
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/cl_bottom"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/f1"
         >
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btn_add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/baseline_add_24"
+            android:backgroundTint="@color/c1"
+            android:onClick="@{(v) -> vm.onClick(v)}"
+            app:layout_anchor="@id/btm_appbar"
+            app:tint="@color/f1"
+            />
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/sr_layout"
             isRefreshing="@{vm.lvIsRefreshing}"
             viewModel="@{vm}"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/ll_bottom"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="50dp"
             >
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_track_list"
+                isChanged="@{vm.lvItemSetChanged}"
+                items="@{vm.lvMyTracksList}"
+                viewModel="@{vm}"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/f1"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                items="@{vm.lvMyTracksList}"
-                viewModel="@{vm}"
-                isChanged="@{vm.lvItemSetChanged}"
-                />
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/ll_bottom"
+        <com.google.android.material.bottomappbar.BottomAppBar
+            android:id="@+id/btm_appbar"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:weightSum="2"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:background="@color/c1"
+            android:layout_gravity="bottom"
+            app:backgroundTint="@color/c1"
+            app:fabAlignmentMode="end"
             >
 
-            <com.balysv.materialripple.MaterialRippleLayout
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                app:mrl_rippleOverlay="true"
-                app:mrl_rippleDuration="250"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:orientation="horizontal"
                 >
 
-                <androidx.appcompat.widget.AppCompatImageView
+                <ImageView
                     android:id="@+id/btn_setting"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:padding="5dp"
+                    app:tint="@color/f1"
+                    android:background="?attr/selectableItemBackgroundBorderless"
                     android:src="@drawable/baseline_settings_24"
-                    android:tint="@color/f1"
-                    android:padding="7dp"
-                    android:onClick="@{(v) -> vm.onClick(v)}"
-                    />
+                    android:onClick="@{(v) -> vm.onClick(v)}" />
 
-            </com.balysv.materialripple.MaterialRippleLayout>
+                <ImageView
+                    android:id="@+id/btn_help"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:padding="5dp"
+                    app:tint="@color/f1"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:src="@drawable/baseline_help_24"
+                    android:onClick="@{(v) -> vm.onClick(v)}" />
 
-            <com.balysv.materialripple.MaterialRippleLayout
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                app:mrl_rippleOverlay="true"
-                app:mrl_rippleDuration="250"
-                >
+            </LinearLayout>
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/btn_add"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:src="@drawable/baseline_add_24"
-                    android:tint="@color/f1"
-                    android:padding="7dp"
-                    android:onClick="@{(v) -> vm.onClick(v)}"
-                    />
+        </com.google.android.material.bottomappbar.BottomAppBar>
 
-            </com.balysv.materialripple.MaterialRippleLayout>
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </layout>
