--- a/app/src/main/res/drawable/ripple_c1.xml
+++ b/app/src/main/res/drawable/ripple_c1.xml
@@ -5,7 +5,7 @@
     tools:targetApi="lollipop">
 
     <item android:id="@android:id/background">
-        <shape android:shape="rectangle">
+        <shape android:shape="oval">
             <solid android:color="@color/f1" /> <!-- background color -->
         </shape>
     </item>
