--- a/app/src/main/res/layout/setting_fragment.xml
+++ b/app/src/main/res/layout/setting_fragment.xml
@@ -107,7 +107,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingVertical="20dp"
+                android:paddingVertical="15dp"
                 android:paddingHorizontal="30dp"
                 >
 
@@ -122,12 +122,13 @@
                     />
 
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
                     android:src="@drawable/baseline_feedback_24"
                     android:tint="@color/c1"
                     android:onClick="@{() -> vm.onClickNotiReadFail()}"
                     android:background="@drawable/ripple_c1"
+                    android:padding="5dp"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
