--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -9,61 +9,6 @@
             type="danggai.app.parcelwhere.ui.main.MainViewModel"/>
     </data>
 
-        <!--        <androidx.appcompat.widget.LinearLayoutCompat-->
-<!--            android:id="@+id/ll_bottom"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="50dp"-->
-<!--            android:weightSum="2"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintRight_toRightOf="parent"-->
-<!--            app:layout_constraintLeft_toLeftOf="parent"-->
-<!--            android:background="@color/c1"-->
-<!--            >-->
-
-<!--            <com.balysv.materialripple.MaterialRippleLayout-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:layout_height="match_parent"-->
-<!--                app:mrl_rippleOverlay="true"-->
-<!--                app:mrl_rippleDuration="250"-->
-<!--                >-->
-
-<!--                <androidx.appcompat.widget.AppCompatImageView-->
-<!--                    android:id="@+id/btn_setting"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_gravity="center"-->
-<!--                    android:src="@drawable/baseline_settings_24"-->
-<!--                    android:tint="@color/f1"-->
-<!--                    android:padding="7dp"-->
-<!--                    android:onClick="@{(v) -> vm.onClick(v)}"-->
-<!--                    />-->
-
-<!--            </com.balysv.materialripple.MaterialRippleLayout>-->
-
-<!--            <com.balysv.materialripple.MaterialRippleLayout-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:layout_height="match_parent"-->
-<!--                app:mrl_rippleOverlay="true"-->
-<!--                app:mrl_rippleDuration="250"-->
-<!--                >-->
-
-<!--                <androidx.appcompat.widget.AppCompatImageView-->
-<!--                    android:id="@+id/btn_add"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_gravity="center"-->
-<!--                    android:src="@drawable/baseline_add_24"-->
-<!--                    android:tint="@color/f1"-->
-<!--                    android:padding="7dp"-->
-<!--                    android:onClick="@{(v) -> vm.onClick(v)}"-->
-<!--                    />-->
-
-    <!--            </com.balysv.materialripple.MaterialRippleLayout>-->
-
-    <!--        </androidx.appcompat.widget.LinearLayoutCompat>-->
-
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/cl_bottom"
         android:layout_width="match_parent"
@@ -79,6 +24,7 @@
             android:backgroundTint="@color/c1"
             android:onClick="@{(v) -> vm.onClick(v)}"
             app:layout_anchor="@id/btm_appbar"
+            app:borderWidth="0dp"
             app:tint="@color/f1"
             />
 
