--- a/app/src/main/res/layout/track_add_fragment.xml
+++ b/app/src/main/res/layout/track_add_fragment.xml
@@ -48,7 +48,7 @@
                     android:hint="@string/item_name"
                     android:background="@color/f1" />
 
-                <View style="@style/LinearDevider.20dp" />
+                <View style="@style/LinearDivider.20dp" />
 
                 <androidx.appcompat.widget.AppCompatEditText
                     style="@style/EditText.MatchWrap"
