--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="b2">#777777</color>
     <color name="b3">#dddddd</color>
     <color name="b4">#04000000</color>
+    <color name="b5">#aa000000</color>
 
     <color name="c1">#8AAAE5</color>
     <color name="c2">#dd8AAAE5</color>
