--- a/app/src/main/res/layout/layout_target.xml
+++ b/app/src/main/res/layout/layout_target.xml
@@ -8,15 +8,17 @@
     >
 
     <TextView
-        android:id="@+id/custom_text"
+        style="@style/TextView"
+        android:id="@+id/tv_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="5dp"
+        android:paddingHorizontal="30dp"
         android:gravity="center"
-        android:text="this is a custom text"
+        android:text="Sample Text"
         android:textAlignment="center"
         android:textColor="@android:color/white"
-        android:textSize="24dp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/close_target"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,11 +29,10 @@
         android:id="@+id/close_target"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:layout_marginBottom="120dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:text="다음"
+        android:paddingVertical="5dp"
+        android:layout_marginHorizontal="50dp"
+        android:layout_marginBottom="150dp"
+        android:text="@string/next"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
