--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -93,6 +93,7 @@
                     app:tint="@color/f1"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:src="@drawable/baseline_help_24"
+                    android:onClick="@{(v) -> vm.onClick(v)}"
                     />
 
             </LinearLayout>
