--- a/app/src/main/res/layout/setting_fragment.xml
+++ b/app/src/main/res/layout/setting_fragment.xml
@@ -65,6 +65,7 @@
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
+                    android:contentDescription="@string/desc_noti_permission"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -98,6 +99,7 @@
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
+                    android:contentDescription="@string/desc_noti_get"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -132,6 +134,7 @@
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
+                    android:contentDescription="@string/desc_noti_fail"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -181,6 +184,7 @@
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
+                    android:contentDescription="@string/desc_auto_refresh"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
