--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -89,7 +89,7 @@
                     />
 
                 <ImageView
-                    android:id="@+id/btn_help"
+                    android:id="@+id/btn_tutorial"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
